2010-05-14  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Chromium: update test expectations.

        * platform/chromium-linux/fast/loader/recursive-before-unload-crash-expected.txt:

2010-05-14  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Dimitri Glazkov.

        Instead of rebaslining prototype-inheritance for Chromium, add indexedDB to its exceptions
        https://bugs.webkit.org/show_bug.cgi?id=39122

        The test has a way to name properties that shouldn't be tested (used when they're not enabled
        by most ports).  Use this feature rather than creating custom baselines.

        * fast/dom/script-tests/prototype-inheritance.js:
        * platform/chromium-mac/fast/dom/prototype-inheritance-expected.txt: Removed.
        * platform/chromium-win/fast/dom/prototype-inheritance-expected.txt: Removed.

2010-05-14  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Nate Chapin.

        [Chromium] Rebaseline prototype-inheritance
        https://bugs.webkit.org/show_bug.cgi?id=39116

        IndexedDB is now turned on for Chromium's test shell.  I'm not sure
        if this is the correct behavior or not (can someone confirm which it is?)
        but we should get this test running again so we can catch real regressions.
        And, before taking this out from behind a flag, we should be sure to fix it.

        * platform/chromium-mac/fast/dom/prototype-inheritance-expected.txt: Added.
        * platform/chromium-win/fast/dom/prototype-inheritance-expected.txt: Added.

2010-05-14  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed, unskip passing tests.

        [Qt] animations/dynamic-stylesheet-loading.html fails with accelerated compositing
        https://bugs.webkit.org/show_bug.cgi?id=37381

        * platform/qt/Skipped:
         - animations/simultaneous-start-left.html unskipped.
         - animations/dynamic-stylesheet-loading.html unskipped.

2010-05-14  Zhenyao Mo  <zmo@google.com>
